--- a/presupuesto/view/distribucion.xml
+++ b/presupuesto/view/distribucion.xml
@@ -11,23 +11,43 @@
             </field>
         </record>
 
+         <record model="ir.ui.view" id="distribucion_tree_view">
+            <field name="name">accion.tree</field>
+            <field name="model">presupuesto.distribucion</field>
+            <field name="arch" type="xml">
+                <tree string="Distribucion de Presupuesto">
+                    <field name="codigo_accion"/>
+                    <field name="partida" />
+                </tree>
+            </field>
+        </record>
+
         <record model="ir.ui.view" id="distribucion_form_view">
             <field name="name">distribucion.form</field>
             <field name="model">presupuesto.distribucion</field>
             <field name="arch" type="xml">
                 <form string="Formulario de Distribucion de Presupuesto">
-                    <group colspan="2" col="2">
-                        <separator string="Distribucion de Presupuesto" colspan="2"/>
-                        <field name="proyecto"/>
-                        <field name="codigo_proyecto" />
-                        <field name="codigo_accion"  />
-                        <field name="accion" />
-                        <field name="partida" />
-                        <field name="descripcion" />
-                        <field name="monto_pre" />
-                        <field name="aceptar"/>
-                        <field name="fecha"/>
-                        <field name="disponibilidad"/>
+                    <group colspan="3" col="3">
+                        <group colspan="4" col="4">
+                            <separator string="Distribucion de Presupuesto" />
+                        </group>
+                        <group colspan="4" col="4">
+                            <field name="proyecto"/>
+                        </group>
+                        <group colspan="4" col="4">
+                            <field name="codigo_accion" colspan="2" width="110" />
+                            <field name="accion" colspan="2"  domain="[('proyecto','=',proyecto)]" on_change="on_change_accion(accion)"/>
+                        </group>
+                        <group colspan="4" col="4">
+                            <field name="partida" colspan="2" width="110" on_change="on_change_partida(partida)"/>
+                            <field name="descripcion" colspan="2" />
+                        </group>
+                        <group colspan="2" col="2">
+                            <field name="monto_pre" colspan="2" width="200"/>
+                            <field name="aceptar"/>
+                            <field name="fecha"/>
+                            <field name="disponibilidad" width="110" readonly='1'/>
+                        </group>
                     </group>
                 </form>
             </field>
