--- a/desarrollo_social/views/carga_familiar.xml
+++ b/desarrollo_social/views/carga_familiar.xml
@@ -23,13 +23,13 @@
 
 				<!-- Datos pertenecientes al Becado-->
 					<separator string="Datos Personales del Becado" colspan="4"/>
-					<field name="cedula_becado" nolabel="0"  placeholder="Cédula"/>
-					<field name="segundo_nombre" colspan="2"  placeholder="Segundo Nombre"/>
-					<field name="primer_nombre" colspan="2"  placeholder="Primer Nombre"/>
+					<field name="cedula_becado"  nolabel="0"  placeholder="Cédula" on_change="on_change_datos_personales(cedula_becado)" icon="terp-personal"/>
+					<field name="segundo_nombre" colspan="2" readonly="1"  placeholder="Segundo Nombre"/>
+					<field name="primer_nombre" colspan="2" readonly="1"  placeholder="Primer Nombre"/>
 					
 					
-					<field name="segundo_apellido" colspan="2"  placeholder="Segundo Apellido"/>
-					<field name="primer_apellido" colspan="2"  placeholder="Primer Apellido"/>
+					<field name="segundo_apellido" readonly="1" colspan="2"  placeholder="Segundo Apellido"/>
+					<field name="primer_apellido" readonly="1" colspan="2"  placeholder="Primer Apellido"/>
 					
 
 				<!-- Datos pertenecientes al Becado-->
@@ -77,7 +77,7 @@
 
 
 		
-		<menuitem name="Carga Familiar" id="menu_desarrollo_social_becado_carga_familiar" parent="menu_desarrollo_social"/>
+		<menuitem name="Carga Familiar" id="menu_desarrollo_social_becado_carga_familiar" parent="menu_desarrollo_social" icon="terp-personal"/>
         <menuitem parent="menu_desarrollo_social_becado_carga_familiar" id="sub_menu_carga_familiar" action="accion_lista_becados_carga_familiar" name="Carga Familiar del Becado"/>
 			
 	</data>
