--- a/desarrollo_social/views/becado.xml
+++ b/desarrollo_social/views/becado.xml
@@ -7,7 +7,7 @@
 			<field name="res_model">hr.employee</field>
 			<field name="view_type">form</field>
 			<field name="domain">[('category_ids.name','ilike','Becado')]</field>
-			<field name="view_mode">form</field>
+			<field name="view_mode">kanban,tree,form</field>
 		</record>
 
 		<record id="vista_becados" model="ir.ui.view">
@@ -74,21 +74,21 @@
 				<field name="birthday" position="after">
 					<field name="edad" class="oe_inline"/>
 				</field>
-				<field name="class_personal" position="after">
+				<!--<field name="class_personal" position="after">
 					<field name="cargo_desempenado"/>
-				</field>
-				<field name="work_location" position="after">
+				</field>-->
+				<!--<field name="work_location" position="after">
 					<field name="cargo_desempenado"/>
-				</field>
+				</field>-->
 				<field name="bank_account_id" position="before">
 					<field name="sueldo"/>
 				</field>
 				<field name="twitter" position="after">
 					<field name="correo" widget="email"/>
 				</field>
-				<field name="sueldo" position="after">
+				<!--<field name="sueldo" position="after">
 					<field name="entidad_bancaria"/>
-				</field>
+				</field>-->
 				<field name="tiempo_servicio" position="after">
 					<field name="ano_antiguedad" class="oe_inline"/>
 				</field>
@@ -131,6 +131,7 @@
 
 		<menuitem name="Desarrollo Social" id="menu_desarrollo_social"/>
 		<menuitem name="Desarrollo Social" id="menu_desarrollo_social_main" parent="menu_desarrollo_social"/>
+		<menuitem id="menu_principal_mantenimiento" name="Mantenimiento" parent="menu_desarrollo_social"/>
 		<menuitem parent="menu_desarrollo_social_main" id="becado" action="accion_vista_becados" name="Becado"/>
 
 	</data>
