Resuelto problemas de de guardado modulo proyecto y Accion

--- a/presupuesto/view/accion.xml
+++ b/presupuesto/view/accion.xml
@@ -28,22 +28,14 @@
             <field name="model">presupuesto.accion</field>
             <field name="arch" type="xml">
                 <form string="Formulario de Accion de Proyectos">
-                    <group colspan="3" col="3">
-                        <group colspan="4">
-                            <separator string="Accion de Proyectos" colspan="4"/>
-                            <field name="proyecto" on_change="on_change_proyecto(proyecto)"/>
-                        </group>
-                        <!--<group colspan="6" col="6">
-                                <field name="codigo_proyecto" colspan="2"/>-->
-                                <field name="codigo_accion"  colspan="2" />
-                                <!--<field name="codigo_a_p"  colspan="2"/>
-                        </group>-->
-                        <group colspan="4">
-                            <field name="descripcion" />
-                             <field name="siglas" />
-                            <field name="unidad" />
-                            <field name="monto"/>
-                        </group>
+                    <group >
+                        <separator string="Accion de Proyectos" colspan="4"/>
+                        <field name="proyecto_id" on_change="on_change_proyecto(proyecto_id)"/>
+                        <field name="codigo_accion"  colspan="2" />
+                        <field name="descripcion" />
+                        <field name="siglas" />
+                        <field name="unidad" />
+                        <field name="monto"/>
                     </group>
                 </form>
             </field>
