--- a/presupuesto/view/distribucion.xml
+++ b/presupuesto/view/distribucion.xml
@@ -20,7 +20,7 @@
                     <field name="partida" string="Codigo Ppto"/>
                     <field name="descripcion" string="Descripcion"/>
                     <field name="monto_pre" string="Asignacion Original"/>
-                    <field name="fecha" string="Asignacion Original"/>
+                    <field name="fecha" string="Fecha de Apertura"/>
                 </tree>
             </field>
         </record>
@@ -35,19 +35,19 @@
                             <separator string="Distribucion de Presupuesto" />
                         </group>
                         <group colspan="4">
-                            <field name="proyecto" placeholder="Seleccione..."/>
+                            <field name="proyecto_id" placeholder="Seleccione..." width="150"/>
                         </group>
                         <group colspan="4" col="4">
-                            <field name="codigo_accion" colspan="2" width="100" attrs="{'readonly':[('accion','=',False)]}"/>
-                            <field name="accion" colspan="2" nolabel="1"  domain="[('proyecto','=',proyecto)]" on_change="on_change_accion(accion)"/>
+                            <field name="codigo_accion" colspan="2" width="150" attrs="{'readonly':[('accion','=',False)]}"/>
+                            <field name="accion" colspan="2" nolabel="1"  domain="[('proyecto_id','=',proyecto_id)]" on_change="on_change_accion(accion)" width="100"/>
                         </group>
                         <group colspan="4" col="4">
-                            <field name="partida" colspan="2" width="110" on_change="on_change_partida(partida)"/>
+                            <field name="partida" colspan="2" width="150" on_change="on_change_partida(partida)"/>
                             <field name="descripcion" colspan="2" nolabel="1" />
                         </group>
                         <group colspan="4" col="4">
-                            <field name="monto_pre" colspan="2" digits="(14, 2)" width="200"/>
-                            <field name="aceptar" colspan="2" width="567" />
+                            <field name="monto_pre" colspan="2" digits="(14, 2)" />
+                            <field name="aceptar" colspan="2" width="100" />
                         </group>
                         <group colspan="6" col="6">
                             <field name="fecha" colspan="2"/>
@@ -55,16 +55,6 @@
                             <field name="monto_proyecto" colspan="2" />
                         </group>
                     </group>
-                    <!--<field name="incidencias_ids" nolabel="1" colspan="4" mode="tree" >
-                        <tree string="Incidencias"  colors="blue:usage=='view';darkred:usage=='internal'">
-                            <field name="monto"/>
-                        </tree>
-                   </field>-->
-                   <field name="incidencias_ids" mode="tree" nolabel="1" colspan="4">
-                    <tree string="Payment Details" editable="top">
-                        <field name="monto"/>
-                    </tree>
-                </field>
                 </form>
             </field>
         </record>
